# noogle

./: .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Makefile  NOTES.md  README.md  alembic.ini  circus.ini  deploy.bash  deploy.py  dev-requirements.txt  docker-compose.yaml  pyproject.toml  release-notes.md  requirements.txt  setup.py  skel.py
alembic/: env.py
alembic/versions/: a6e461660f89_initial_db.py  a729620d85e5_add_structure_info_to_event_model.py  d4a355624d2a_adding_structures_and_thermostats.py
conf/: deploy.bash.j2  gcal-nest-systemd.service.j2  site-sample.yaml  site.yaml
fabfile/: __init__.py  constants.py  git.py  helpers.py  make.py  ver.py
gcal_nest/: __init__.py  __main__.py  cache.py  cli.py  compat.py  db.py  event.py  gcal.py  helpers.py  logger.py  mailgun.py  models.py  nest.py  nest_control.py  settings.py
gcal_nest/cli/: __init__.py  init.py  main.py  service.py  set_.py  settings.py  setup.py  show.py
gcal_nest/cli/dev/: build.py
gcal_nest/cli/dev/templates/: circus.ini  circus.ini.j2  deploy.bash  deploy.bash.j2  gcal-nest-systemd.service  gcal-nest-systemd.service.j2
gcal_nest/conf/: conf-format.ini  gcal_nest.yaml  gcal_nest_settings.ini  gcal_nest_settings.json
noogle/: __init__.py  __main__.py  cache.py  compat.py  db.py  gcal.py  google_auth.py  helpers.py  logger.py  mailgun.py  models.py  nest.py  settings.py  utils.py
noogle/cli/: __init__.py  init.py  logs.py  main.py  purge.py  service.py  set_.py  settings.py  setup.py  shell.py  show.py
noogle/cli/dev/: __init__.py  build.py
noogle/cli/dev/templates/: .env  circus.ini  conf-format.ini  deploy.bash  env.sh  noogle-systemd.service
sample-scripts/: google.py  nest.py
