[tool.poetry]
name = "noogle"
version = "0.1.0"
description = "Connect your Nest thermostat with Google Calendar"
authors = ["Tim McFadden <mtik00@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.7.5"
arrow = "^1.2.1"
click = "^8.0.3"
google-api-python-client = "^2.35.0"
inflect = "^5.3.0"
oauth2client = "^4.1.3"
requests = "^2.27.1"
"ruamel.yaml" = "^0.17.20"
SQLAlchemy-Utils = "^0.38.2"
SQLAlchemy = "^1.4.29"

[tool.poetry.dev-dependencies]
ipython = "^8.0.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
